--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "rxjs": "^6.5.5",
-    "zone.js": "^0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "9.1.7",
     "@angular/compiler-cli": "^9.1.9",
     "@types/jasmine": "3.5.10",
-    "@types/node": "~14.0.11",
-    "codelyzer": "~5.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
     "karma": "~5.0.9",
@@ -42,6 +44,6 @@
     "node-sass": "^4.14.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "typescript": "~3.9.5"
+    "typescript": "^3.8.3"
   }
 }
