--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.11",
     "@angular/common": "^9.1.9",
     "@angular/compiler": "^9.1.9",
     "@angular/core": "^9.1.9",
@@ -19,7 +20,9 @@
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/router": "^9.1.9",
-    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "rxjs": "^6.5.5",
@@ -44,6 +47,7 @@
     "node-sass": "^4.14.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "tslint": "~4.5.1"
   }
 }
