--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.png"
             ],
             "styles": [
               "src/styles.scss"
@@ -82,7 +82,7 @@
             ],
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "favicon.png"
             ]
           }
         },
